# pioneer_p3dx_model

p3dx_control/: CMakeLists.txt  package.xml
p3dx_control/config/: pioneer3dx.yaml
p3dx_control/launch/: control.launch
p3dx_description/: CMakeLists.txt  package.xml
p3dx_description/urdf/: pioneer3dx.gazebo  pioneer3dx_wheel.xacro
p3dx_gazebo/: package.xml
p3dx_gazebo/launch/: pioneer3dx.launch
