<?xml version="1.0"?>
<package>
  <name>p3dx_control</name>
  <version>0.0.1</version>
  <description>
    The p3dx_control package. This is in experimental mode.
  </description>
  
  <maintainer email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</maintainer>
  <license>GPLv3</license>
  <url>https://github.com/RafBerkvens/ua_ros_p3dx</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>rqt_controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_controller</run_depend>
</package>
